--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body {
     font-family: "Open Sans", sans-serif;
     font-size: 16px;
     line-height: 1.5;
-    color: #333;
-    background-color: #f5f5f5;
+    color: #3d2929;
+    background-color: #4695b4;
 }
 
 a {
