--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,25 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+nav ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: space-around;
+}
+
+nav li {
+  cursor: pointer;
+}
+
+#home,
+#portfolio,
+#contact {
+  height: 100vh;
+  padding: 20px;
 }
